@@ -1,8 +1,6 @@
 package br.manga.service;
 
-import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import br.manga.dto.EditoraDTO;
 import br.manga.dto.EditoraResponseDTO;
@@ -20,71 +18,47 @@ public class EditoraServiceImpl implements EditoraService {
 
     @Override
     @Transactional
-    public EditoraResponseDTO create(EditoraDTO editoraDTO) {
+    public EditoraResponseDTO create(EditoraDTO dto) {
         Editora editora = new Editora();
-        editora.setNome(editoraDTO.nome());
-        editora.setSede(editoraDTO.sede());
-        editora.setFundacao(editoraDTO.fundacao());
+        editora.setNome(dto.nome());
+        editora.setSede(dto.sede());
+        editora.setFundacao(dto.fundacao());
+
         editoraRepository.persist(editora);
         return EditoraResponseDTO.valueOf(editora);
     }
 
     @Override
     @Transactional
-    public void update(Long id, EditoraDTO editoraDTO) {
+    public void update(Long id, EditoraDTO dto) {
         Editora editora = editoraRepository.findById(id);
-        
-        editora.setNome(editoraDTO.nome());
-        editora.setSede(editoraDTO.sede());
-        editora.setFundacao(editoraDTO.fundacao());
-        editoraRepository.persist(editora);
+        editora.setNome(dto.nome());
+        editora.setSede(dto.sede());
+        editora.setFundacao(dto.fundacao());
     }
 
     @Override
     @Transactional
     public void delete(Long id) {
-        Editora editora = editoraRepository.findById(id);
-        
-        editoraRepository.delete(editora);
+        editoraRepository.deleteById(id);
     }
 
     @Override
     public EditoraResponseDTO findById(Long id) {
-        Editora editora = editoraRepository.findById(id);
-        
-        return EditoraResponseDTO.valueOf(editora);
+        return EditoraResponseDTO.valueOf(editoraRepository.findById(id));
     }
 
     @Override
     public List<EditoraResponseDTO> findByNome(String nome) {
-        List<Editora> editoras = editoraRepository.findByNome(nome);
-        
-        return editoras.stream()
-                .map(EditoraResponseDTO::valueOf)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<EditoraResponseDTO> findBySede(String sede) {
-        List<Editora> editoras = editoraRepository.find("SELECT e FROM Editora e WHERE e.sede = ?1", sede).list();
-        return editoras.stream()
-                .map(EditoraResponseDTO::valueOf)
-                .collect(Collectors.toList());
-    } /*tirar dúvida com professor sobre os erros anteriores nas consultas em todos os ServiceImpl */
-
-    @Override
-    public List<EditoraResponseDTO> findByFundacao(LocalDate fundacao) {
-        List<Editora> editoras = editoraRepository.find("SELECT e FROM Editora e WHERE e.fundacao = ?1", fundacao).list();
-        return editoras.stream()
-                .map(EditoraResponseDTO::valueOf)
-                .collect(Collectors.toList());
+        return editoraRepository.findByNome(nome).stream()
+            .map(EditoraResponseDTO::valueOf)
+            .toList();
     }
 
     @Override
     public List<EditoraResponseDTO> findAll() {
-        List<Editora> editoras = editoraRepository.findAll().list();
-        return editoras.stream()
-                .map(EditoraResponseDTO::valueOf)
-                .collect(Collectors.toList());
+        return editoraRepository.listAll().stream()
+            .map(EditoraResponseDTO::valueOf)
+            .toList();
     }
 }
